# Specialized_Stripe_Integration_Agent

./: README.md
backend/: .gitignore  main.py  pyproject.toml  rag_engine.py  requirements.txt  urls.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatBox.jsx  MessageBubble.jsx
